--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                 <a class="nav-link" href="#">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ContactUs</a>
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><img src="media/darkicon.png" alt="" id="icon" /></a>
               </li>
             </ul>
           </div>
@@ -109,7 +112,6 @@
   <!--  -->
 
   <!-- slider-->
-
 
   <!-- OFFERS-->
   <section class="offers">
@@ -317,21 +319,11 @@
     </div>
     <div class="rightcolumn">
       <div class="icons">
-        <div class="icon">
-          <a href="#"><img src="media/iconmonstr-facebook-6.svg" /></a>
-        </div>
-        <div class="icon">
-          <a href="#"><img src="media/iconmonstr-instagram-11.svg" /></a>
-        </div>
-        <div class="icon">
-          <a href="#"><img src="media/iconmonstr-github-1.svg" /></a>
-        </div>
-        <div class="icon">
-          <a href="#"><img src="media/iconmonstr-pinterest-1.svg" /></a>
-        </div>
-        <div class="icon">
-          <a href="#"><img src="media/iconmonstr-twitter-1.svg"></a>
-        </div>
+        <a href="#"><img src="media/icon facebook light.svg" id="facebook" class="icon" /></a>
+        <a href="#"><img src="media/icon instagram light.svg" id="instagram" class="icon" /></a>
+        <a href="#"><img src="media/icon github light.svg" id="github" class="icon" /></a>
+        <a href="#"><img src="media/icon pinterest light.svg" id="pinterest" class="icon" /></a>
+        <a href="#"><img src="media/icon twitter light.svg" id="twitter" class="icon" /></a>
       </div>
       <div class="copyrights">© 2022 World Mentor. All rights reserved.</div>
     </div>
