--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Services</a>
@@ -184,6 +184,7 @@
           of the two qiblahs in Islam, and it is located inside the old city
           of Al-Quds in Palestine …
         </div>
+        <div id="Al-Aqsa"></div>
         <button class="articlebtn">Read More</button>
       </div>
       <div class="articlecolumn">
@@ -195,6 +196,7 @@
           Emperor Hadrian, and is thought to have been designed as a temple
           for Roman gods …
         </div>
+        <div id="Pantheon"></div>
         <button class="articlebtn">Read More</button>
       </div>
       <div class="articlecolumn">
@@ -206,6 +208,7 @@
           called the Hanging Church because it was built on the southern of
           Babylon Fortress, the Roman fortress in Coptic Cairo (Old Cairo) …
         </div>
+        <div id="Church"></div> 
         <button class="articlebtn">Read More</button>
       </div>
       <div class="articlecolumn">
@@ -218,6 +221,7 @@
           facing Nubia. The four colossal statues of Ramses in front of the
           main temple are spectacular examples of ancient Egyptian art ...
         </div>
+        <div id="Temple"></div>
         <button class="articlebtn">Read More</button>
       </div>
     </div>
@@ -291,7 +295,7 @@
   <!--  -->
   <img src="media/WM.svg" alt="" class="absoluteimg" />
 
-  <div class="radiussection">
+  <div class="radiussection" id="about">
     <div class="column">
       <h4 class="ctitle">About World Mentors</h4>
       <p class="ccontent">
