--- a/index.html
+++ b/index.html
@@ -184,7 +184,12 @@
           of the two qiblahs in Islam, and it is located inside the old city
           of Al-Quds in Palestine …
         </div>
-        <div id="Al-Aqsa"></div>
+         <div class="articlecont hidden-article ">
+          Al-Aqsa Mosque is one of the largest mosques in the world and one of
+          the three mosques that Muslims travel to, and it is also the first
+          of the two qiblahs in Islam, and it is located inside the old city
+          of Al-Quds in Palestine …
+        </div>
         <button class="articlebtn">Read More</button>
       </div>
       <div class="articlecolumn">
@@ -196,7 +201,12 @@
           Emperor Hadrian, and is thought to have been designed as a temple
           for Roman gods …
         </div>
-        <div id="Pantheon"></div>
+        <div class="articlecont hidden-article">
+          The Pantheon is one of the best-preserved monuments of ancient Rome.
+          The structure, completed around 126-128 A.D. during the reign of
+          Emperor Hadrian, and is thought to have been designed as a temple
+          for Roman gods …
+        </div>
         <button class="articlebtn">Read More</button>
       </div>
       <div class="articlecolumn">
@@ -208,7 +218,12 @@
           called the Hanging Church because it was built on the southern of
           Babylon Fortress, the Roman fortress in Coptic Cairo (Old Cairo) …
         </div>
-        <div id="Church"></div> 
+        <div class="articlecont hidden-article">
+          The Hanging Church is one of the oldest churches in Egypt and the
+          history of a church on this site dates to the 2nd century AD. It is
+          called the Hanging Church because it was built on the southern of
+          Babylon Fortress, the Roman fortress in Coptic Cairo (Old Cairo) …
+        </div> 
         <button class="articlebtn">Read More</button>
       </div>
       <div class="articlecolumn">
@@ -221,7 +236,13 @@
           facing Nubia. The four colossal statues of Ramses in front of the
           main temple are spectacular examples of ancient Egyptian art ...
         </div>
-        <div id="Temple"></div>
+        <div class="articlecont hidden-article">
+          Abu Simbel, site of two temples built by the Egyptian king Ramses
+          II, now located in Aswan governorate, southern Egypt. In ancient
+          times the area was at the southern frontier of pharaonic Egypt,
+          facing Nubia. The four colossal statues of Ramses in front of the
+          main temple are spectacular examples of ancient Egyptian art ...
+        </div>
         <button class="articlebtn">Read More</button>
       </div>
     </div>
