--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <a class="nav-link" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="#services">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="#footer">Contact Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"><img src="media/darkicon.png" alt="" id="icon" /></a>
@@ -64,7 +64,7 @@
   </section>
 
   <!--  -->
-  <div class="oursection">
+  <div class="oursection" id="services">
     <div class="row1">
       <div class="our">our destinitions</div>
       <div class="but"><button class="btn1">see all</button></div>
@@ -332,7 +332,7 @@
   </div>
   <!--  -->
 
-  <div class="footer">
+  <div class="footer" id="footer">
     <div class="leftcolumn">
       <div class="footertitle">World Mentors</div>
       <div class="footerlinks">
